test/spec_vectors/simd_int_to_int_extend/fail/module_3.wat
(module (func (result v128) (i16x8.extend_low_i8x16_s (i32.const 0))))